<resources>
    <string name="app_name">holamundo</string>

    <string name="TextView1">Hola Mundo</string>
    <string name="EditText1">Escribe tu nombre</string>
    <string name="EditText3">Escribe tu apellido paterno</string>
    <string name="EditText4">Escribe tu apellido materno</string>
    <string name="Button1">Saludar</string>
    <string name="Button2">Salir</string>

    <string name="TextView2">Digamos todos juntos hola: </string>
    <string name="Button3">Regresar</string>
</resources>