<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textoSaludo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/TextView1"
        android:textSize="50sp"
        android:textAlignment="center"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/idNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/EditText1"
        android:textSize="20sp"
        android:inputType="textPersonName"/>

    <EditText
        android:id="@+id/idApaterno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/EditText3"
        android:textSize="20sp"
        android:inputType="textPersonName"/>


    <EditText
        android:id="@+id/idAmaterno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/EditText4"
        android:textSize="20sp"
        android:inputType="textPersonName"/>

    <Button
        android:id="@+id/ButtonSaludar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Button1"
        android:textSize="50dp"
        android:backgroundTint="@color/design_default_color_secondary_variant"/>

    <Button
        android:id="@+id/ButtonCancelar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Button2"
        android:textSize="50dp"
        android:backgroundTint="@color/design_default_color_error"/>
</LinearLayout>